kube/thebitcoincashfund-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: thebitcoincashfund
  namespace: default
spec:
  ports:
    - port: 86
      targetPort: 80
  selector:
    service: thebitcoincashfund
  type: NodePort
