kube/thebitcoincashfund-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thebitcoincashfund-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - www.thebitcoincash.fund
    - thebitcoincash.fund
    secretName: thebitcoincashfund-tls
  backend:
    serviceName: thebitcoincashfund
    servicePort: 86
  rules:
  - host: thebitcoincash.fund
    http:
      paths:
      - path: /
        backend:
          serviceName: thebitcoincashfund
          servicePort: 86
  - host: www.thebitcoincash.fund
    http:
      paths:
      - path: /
        backend:
          serviceName: thebitcoincashfund
          servicePort: 86
